# application/domain/src/main/java/sk/posam/fsa/skill_market/domain/service/ProjectFacade.java
@@ -13,6 +13,7 @@ public interface ProjectFacade {
     Project getProjectDetail(UUID projectId);
 
     List<Project> getAssignedProjects(UUID freelancerId);
+    List<Project> getMyProjects(UUID userId);
 
     Project createProject(CreateProjectCommand command);
 
